tests/miniJava/pos/000885_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . length ) java = 0 ; else java = 0 ; } }
