tests/miniJava/neg/000174_mutation.MiniJava
class java { public static length Main ( String [ ] java ) { { } } }
